--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -111,8 +111,10 @@ input[type="checkbox"]:checked.task-list-item-checkbox {
 .post-under-title {
   margin-top: -0.7rem;
   margin-bottom: 0.5rem;
+  font-size: 1.2rem;
 }
 
 .post-tag {
   font-family: $code-font-family;
+  font-weight: bold;
 }
