--- a/_layouts/page-not-on-sidebar.html
+++ b/_layouts/page-not-on-sidebar.html
@@ -4,5 +4,13 @@ layout: default
 
 <article role="article" class="page">
   <h1 class="page-title">{{ page.title }}</h1>
+
+  {% if page.show_lead_image and page.image %}
+    <img
+      src="{{ page.image }}"
+      alt="{{ page.image_alt | default: "Article header image, used for decoration." | strip }}"
+    />
+  {% endif %}
+
   {{ content }}
 </article>
