Add more head tags
This closes #28

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Theme Color for webbrowsers -->
+  <meta name="theme-color" content="#3465a4">
+
   <!-- CSS -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Ubuntu+Mono&display=swap"
@@ -13,6 +16,9 @@
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-144-precomposed.png">
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
+
+  <!-- Age rating -->
+  <meta name="rating" content="General">
 
   <!-- RSS (well, actually Atom) -->
   {% comment %} From jekyll/jekyll-feed {% endcomment %}
