--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@ layout: default
   <time datetime="{{ page.date | date_to_xmlschema }}" class="post-date">{{ page.date | date: '%B %d, %Y' }}</time>
   {% if page.categories %}
     <!-- Categories -->
-    {% assign sorted = page.categories | sort %}
-    {% for category in sorted %}
-    <a class="post-tag" href="/topics/{{ category }}/">#{{ category }}</a>
+    {% assign sorted_categories = page.categories | sort %}
+    {% for category in sorted_categories %}
+      <a class="post-tag" href="/topics/{{ category }}/">#{{ category }}</a>
     {% endfor %}
   {% endif %}
   </div>
