--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Theme Color for webbrowsers -->
-  <meta name="theme-color" content="#3465a4">
+  <meta name="theme-color" content="hsl(214, 52%, 42%)">
 
   <!-- CSS -->
   <link rel="stylesheet"
