Adding anchor links from allejo/jekyll-anchor-headings
This fixes #62

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -130,10 +130,25 @@ details>summary {
 
 summary::after {
   content: " ▶ Show";
-  color: $link-color;
+  color: $sidebar-color;
   display: block;
 }
 
 details[open] summary:after {
   content: " ▼ Hide";
+}
+
+// Anchor links
+h1 .anchor-link-img, h2 .anchor-link-img, h3 .anchor-link-img, h4 .anchor-link-img, h5 .anchor-link-img, h6 .anchor-link-img  {
+  visibility: hidden;
+}
+
+h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img, h4:hover .anchor-link-img, h5:hover .anchor-link-img, h6:hover .anchor-link-img {
+  visibility: visible;
+}
+
+.anchor-link-img {
+  fill: $sidebar-color;
+  padding: 0;
+  vertical-align: middle;
 }
