--- a/_sass/_poole.scss
+++ b/_sass/_poole.scss
@@ -43,7 +43,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: $link-color;
+  color: $sidebar-color;
   text-decoration: none;
 
   /* `:focus` is linked to `:hover` for basic accessibility */
