--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,7 +8,7 @@ $body-bg:            white;
 $body-color:         hsl(  0,  0%, 32%);
 $border-color:       hsl(  0,  0%, 90%);
 $code-color:         hsl(354, 42%, 56%);
-$link-color:         hsl(205, 69%, 49%);
+//$link-color:         hsl(205, 69%, 49%);
 $sidebar-color:      hsl(214, 52%, 42%);
 $share-button-color: hsl(  0,  0%, 13%);
 $share-hover-color:  hsl(  0,  0%, 53%);
