Add nowrap class

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -152,3 +152,7 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
   padding: 0;
   vertical-align: middle;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
