Add start of post and helpful CCS for SupSub
Supsub from: https://stackoverflow.com/questions/3742975/subscript-and-superscript-for-the-same-element

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -156,3 +156,20 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
 .nowrap {
   white-space: nowrap;
 }
+
+// Super and subscript on the same word
+.supsub {
+    display: inline-block;
+}
+
+.supsub sup,
+.supsub sub {
+    position: relative;
+    display: block;
+    font-size: .5em;
+    line-height: 1.2;
+}
+
+.supsub sub {
+    top: .3em;
+}
