--- a/_includes/resume_experience.html
+++ b/_includes/resume_experience.html
@@ -1,12 +1,8 @@
-<div class="resume-experience-section-header"> 
+<div class="resume-header-grid">
     {% comment %}The first line including company and location. {% endcomment %}
-    <div class="resume-experience-row">
-      <h3><span class="resume-experience-company">{{ include.company | markdownify }}</span></h3>
-      <span class="resume-experience-location">{{ include.location | markdownify }}</span>                 
-    </div>
+    <div class="resume-company"><h3>{{ include.company | markdownify }}</h3></div>
+    <div class="resume-location">{{ include.location | markdownify }}</div>
     {% comment %}The second line including position and dates. {% endcomment %}
-    <div class="resume-experience-row">
-      <span class="resume-experience-position">{{ include.position | markdownify }}</span>
-      <span class="resume-experience-dates">{{ include.dates | markdownify }}</span>                                                                    
-    </div>
+    <div class="resume-position">{{ include.position | markdownify }}</div>
+    <div class="resume-dates">{{ include.dates | markdownify }}</div>
 </div>
