--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
 $root-font-family: "PT Sans", "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 $code-font-family: "Ubuntu Mono", Monaco, Consolas, "Lucida Console", Menlo, "Courier New", monospace;
-$site-title-font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+$site-title-font-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
 
 $root-line-height: 1.5;
 
