Replace PT Sans with Trebuchet
PT Sans requires a download from Google. Trebuchet is on most systems
(Win: 99.67% Mac: 97.12% according to https://www.cssfontstack.com/Trebuchet-MS)
and looks pretty good!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,13 @@
   <meta name="theme-color" content="hsl(214, 52%, 42%)">
 
   <!-- CSS -->
+  {% comment %} <!-- Remove the old font call, PT Sans is being replaced -->
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Ubuntu+Mono&display=swap"
+        type="text/css" />
+  {% endcomment %}
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap"
         type="text/css" />
   <link rel="stylesheet" href="/assets/css/main.css" type="text/css">
 
