Add fake-h1 class for when we need 2 "titles"

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -9,11 +9,11 @@
   }
 
   // Headers
-  h1, h2, h3 {
+  .fake-h1, h1, h2, h3 {
     font-family: $site-title-font-family;
   }
 
-  h1 {
+  .fake-h1, h1 {
     text-align: center;
   }
 
