--- a/_sass/_poole.scss
+++ b/_sass/_poole.scss
@@ -93,7 +93,7 @@ th {
  * Headings, body text, lists, and other misc typographic elements.
  */
 
-h1, h2, h3, h4, h5, h6 {
+.fake-h1, h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
   font-weight: 600;
   line-height: 1.25;
@@ -101,7 +101,7 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 
-h1 {
+.fake-h1, h1{
   font-size: $h1-font-size;
 }
 
