Reorder and update legal text

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -48,6 +48,11 @@
   font-size: $card-font-size;
 }
 
+// Small sidebar
+.sidebar small {
+  font-size: $legal-font-size; 
+}
+
 // Legal links
 .legal {
   font-size: $legal-font-size;
