--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -175,3 +175,10 @@ h1:hover .anchor-link-img, h2:hover .anchor-link-img, h3:hover .anchor-link-img,
 .supsub sub {
     top: .3em;
 }
+
+// ChatGPT include
+
+.chatgpt-prompt-only, 
+.chatgpt-output-only {
+  font-family: $code-font-family;
+}
