--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -18,6 +18,26 @@
   }
 }
 
+// Linktree Grid
+.linktree-links-grid {
+  display: grid;
+  grid-template-columns: 10em auto;
+  grid-gap: 0.5em;
+  background-color: #f9f9f9;
+  align-items: center;
+  border: 0.15em solid #e5e5e5;
+  border-radius: 5px;
+  padding: 0.25em;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+}
+
+.linktree-element {
+  padding: 0.2em;
+  border: 0.15em solid #e5e5e5;
+  border-radius: 5px;
+}
+
 // Card Grid
 .card-grid {
   display: grid;
