--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -18,41 +18,11 @@
   }
 }
 
-// Linktree container
-.linktree-container {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  padding: 0.25em;
-  margin-top: 0.25em;
-  margin-bottom: 0.25em;
-}
-
-.linktree-item {
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: min-content 1fr;
-  justify-content: center;
-  align-items: center;
-  background-color: #f9f9f9;
-  border: 0.15em solid #e5e5e5;
-  border-radius: 5px;
-  padding: 0.25em;
-  margin-top: 0.25em;
-  margin-bottom: 0.25em;
-}
-
-.linktree-image {
-  border: 0.15em solid red;
-  top: 50%;
-  left: 50%;
-}
-
-.linktree-text {
-  text-align: center;
-  font-size: $card-font-size;
-  flex-grow: 1;
-
+// Center headlines
+div.headline-center {
+  h1, h2, h3, h4, h5, h6 {
+    text-align: center;
+  }
 }
 
 // Card Grid
