Add mastodon instance variable

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -38,7 +38,7 @@
           {% include icon-twitter.svg %}
         </a>
         <!-- Mastodon Button -->
-        <a rel="me" class="sidebar-button mastodon-button" href="https://fediscience.org/@{{ site.author.mastodon }}">
+        <a rel="me" class="sidebar-button mastodon-button" href="https://{{ site.author.mastodon_instance }}/@{{ site.author.mastodon }}">
           {% include icon-mastodon.svg %}
         </a>
         <!-- LinkedIn Button -->
