Add github button to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -41,6 +41,10 @@
         <a rel="me" class="sidebar-button mastodon-button" href="https://{{ site.author.mastodon_instance }}/@{{ site.author.mastodon }}">
           {% include icon-mastodon.svg %}
         </a>
+        <!-- Github Button -->
+        <a rel="me" class="sidebar-button github-button" href="https://www.github.com/{{ site.author.github}}/">
+          {% include icon-github.svg %}
+        </a>
         <!-- LinkedIn Button -->
         <a rel="me" class="sidebar-button linkedin-button" href="https://www.linkedin.com/in/{{ site.author.linkedin}}/">
           {% include icon-linkedin.svg %}
