--- a/_includes/article_card.html
+++ b/_includes/article_card.html
@@ -1,14 +1,16 @@
-<div class="card-element card-image">
-  {% comment %} The image. {% endcomment %}
-  <a href="{{ include.url }}">
-    <img src="{{ include.image }}" alt="{{ include.image_alt | default: "Article header image, used for decoration." }}">
-  </a>
-</div>
-<div class="card-element card-text">
-  {% comment %} The text blurb. {% endcomment %}
-  <a href="{{ include.url }}">
-    <strong>{{ include.title }}</strong>
-  </a>
-  <br>
-  {{ include.description }}
+<div class="article-card">
+  <div class="card-element card-image">
+    {% comment %} The image. {% endcomment %}
+    <a href="{{ include.url }}">
+      <img src="{{ include.image }}" alt="{{ include.image_alt | default: "Article header image, used for decoration." }}">
+    </a>
+  </div>
+  <div class="card-element card-text">
+    {% comment %} The text blurb. {% endcomment %}
+    <a href="{{ include.url }}">
+      <strong>{{ include.title }}</strong>
+    </a>
+    <br>
+    {{ include.description }}
+  </div>
 </div>
