Make thinner blockquote line

--- a/_sass/_poole.scss
+++ b/_sass/_poole.scss
@@ -164,9 +164,11 @@ abbr {
 
 blockquote {
   padding: .5rem 1rem;
-  margin: .8rem 0;
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
+  margin-left: 0.2rem;
   color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5;
+  border-left: .15rem solid #e5e5e5;
 
   p:last-child {
     margin-bottom: 0;
