Start adding backlinks to book posts

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -75,5 +75,8 @@ don't find them.{% endcomment %}
 
 </article>
 
+<!-- Backlinks -->
+{% include book_backlinks.html %}
+
 <!-- Related and Recent Books -->
 {% include related_books.html %}
