Convert some boarders to <hr>s instead

--- a/_includes/related_books.html
+++ b/_includes/related_books.html
@@ -24,7 +24,7 @@ category or not.
   <div class="card-grid">
 {% endcapture %}
 
-{% capture close_h2 %}
+{% capture endh2 %}
   </div>
 </aside>
 {% endcapture %}
@@ -106,7 +106,6 @@ category or not.
 
 {% comment %} Fill in the remaining posts with recent ones {% endcomment %}
 
-
 {% if site.related_posts != empty %}
   {% if placed_books.size < max_books %}
     {% if placed_h2 == false %}
@@ -139,5 +138,5 @@ category or not.
 {% comment %} Close the h2 divs if they were placed {% endcomment %}
 
 {% if placed_h2 == true %}
-  {{ close_h2 }}
+  {{ endh2 }}
 {% endif %}
